fix journal list overflow

--- a/home.css
+++ b/home.css
@@ -11,6 +11,7 @@ html, body {
     padding: 10px;
     box-sizing: border-box;
     background-color: #011638;
+    overflow-y: scroll;
 }
 
 #journals {
